# notifications/urls.py
@@ -1,5 +1,6 @@
 from django.urls import path
 from .views import (
+    DeviceTokenView,
     NotificationsListView,
     NotificationDetailView,
     NotificationsReadAllView,
@@ -11,4 +12,5 @@ urlpatterns = [
     path('notifications/read-all', NotificationsReadAllView.as_view()),
     path('notifications/unread-count', NotificationsUnreadCountView.as_view()),
     path('notifications/<int:notification_id>', NotificationDetailView.as_view()),
+    path('me/device-token', DeviceTokenView.as_view()),
 ]
